# OpenVision

./: CMakeLists.txt  LoadDataSets.py  LogisticRegression.py  MLPHiddenLayer.py  Optimizer.py  README.md  bac.py  index.html  params.json  pyvision.py  sgd.py  t3.py  test_plot.py
Common/: OpenCVCommon.hpp
ImgAR/: ImgAR.hpp
ImgApp/: CMakeLists.txt  UniStrokeGesture.cpp  UniStrokeGesture.hpp  UniStrokeGestureRecognizer.hpp
ImgBasis/: polybasis.cpp  polybasis.hpp
ImgConfig/: configuration.conf
ImgConfig/ConfigLib/: Makefile  ac_config.h  config.status  libtool
ImgConfig/ConfigLib/doc/: Makefile
ImgConfig/ConfigLib/examples/: Makefile
ImgConfig/ConfigLib/examples/c/: Makefile  example1  example2  example3
ImgConfig/ConfigLib/examples/c++/: Makefile  example1  example2  example3  example4
ImgConfig/ConfigLib/examples/c++/.deps/: example1.Po  example2.Po  example3.Po  example4.Po
ImgConfig/ConfigLib/examples/c++/.libs/: example1  example2  example3  example4
ImgConfig/ConfigLib/examples/c/.libs/: example1  example2  example3
ImgConfig/ConfigLib/lib/: Makefile  grammar.c  libconfig++.la  libconfig.la  scanner.c  scanner.l
ImgConfig/ConfigLib/lib/.deps/: libconfig___la-libconfigcpp.Plo
ImgConfig/ConfigLib/lib/.libs/: libconfig++.la  libconfig++.so.9.1.3  libconfig.la  libconfig.so.9.1.3
ImgConfig/ConfigLib/tests/: Makefile  libconfig_tests
ImgConfig/ConfigLib/tests/.libs/: libconfig_tests
ImgConfig/ConfigLib/tinytest/: Makefile
ImgFeatures/: CMakeLists.txt  CMakeLists.txt~  Fast.cpp  Fast.hpp  Fast3D.cpp  Fast3D.hpp  FeatureDetector.cpp  FeatureDetector.hpp  GoodFeatureToTrack.cpp  GoodFeatureToTrack.hpp  HOG.cpp  HOG.hpp  Harris3D.cpp  Harris3D.hpp  HarrisCorner.cpp  HarrisCorner.hpp  SubPixelCorner.cpp  SubPixelCorner.hpp  TemporalFilter.cpp  TemporalFilter.hpp  denseof.cpp  denseof.hpp  integralImage.cpp  integralImage.h  lbpfeatures.cpp  lbpfeatures.hpp  opticalflow.cpp  opticalflow.hpp  randomferms.cpp  randomferms.h  randomferns.cpp  randomferns.h  temporalDerivative.hpp  termporalfillter.cpp
ImgML/: LogisticRegression.cpp  LogisticRegression.hpp  LogisticRegression.py  eigenutils.cpp  eigenutils.hpp  gaussian.cpp  gaussian.hpp  gaussianmixture.cpp  gaussianmixture.hpp  hmm.cpp  hmm.hpp  hmm.hpp.autosave  load_datasets.py  logisticregression.cpp  logisticregression.h  markovchain.cpp  markovchain.hpp
ImgML/PyVision/: LoadDataSets.py  LogisticRegression.py  MLPHiddenLayer.py  Optimizer.py  calclex.py  m1.py  parsetab.py  pyvision.py  pyvision_common.py  test_parser.py  test_parser2.py
ImgProc/: CMakeLists.txt  CMakeLists.txt~  ContrastStretching.cpp  ContrastStretching.hpp  Convolution.cpp  Convolution.hpp  Histogram.cpp  Histogram.hpp  InterPolation.hpp  Noise.hpp  adaptiveskindetector.cpp  adaptiveskindetector.hpp  build.ksh  channelfilter.cpp  channelfilter.hpp  colorconversion.cpp  colorconversion.hpp  convolution.cpp  convolution.hpp  convolve.h  edgedetector.cpp  edgedetector.hpp  image.h  imconv.h  imutil.h  lineDetector.hpp  meanshift.cpp  meanshift.h  preprocess.cpp  preprocess.h.autosave  preprocess.hpp  test_histogram.cpp
ImgUtils/: CMakeLists.txt  CMakeLists.txt~  ImgUtils.cpp  ImgUtils.hpp  logger.h  threadpool.cpp  threadpool.h
ImgVO/: imgvo.cpp  imgvo.h
POC/ARM/: ass.ksh~  ass1.ksh~  compile_assembly.ksh  generate_assembly.ksh  helloneon-intrinsics.s  helloneon-intrinsics.s~  helloneon-intrinsics1.s  rr.ksh
POC/ARM/bac/: Android.mk~  Application.mk  helloneon-intrinsics.c~  helloneon-intrinsics.h  neon.cpp
POC/ARM/jni/: Android.mk  Android.mk~  Application.mk  Application.mk~  ass1.ksh  helloneon-intrinsics.c~  helloneon-intrinsics.h~  helloneon-intrinsics.s  helloneon-intrinsics.s~  neon.cpp  neon.cpp~
demo/: AA  MakeDemos  MakeDemos~  a.out  build.ksh  build.ksh~  kde_demo  kde_demo.cpp  test_histogram  test_histogram.cpp  test_histogram.cpp~  test_meanshift.cpp
documents/: MeanShiftTracking.tex
samples/Android/AndroidGesture/: .cproject  .project  AndroidGestureDocs.Doxyfile  AndroidManifest.xml
samples/Android/AndroidGesture/doxygen/html/: GesturePoint_8hpp_source.html  OpenCVCommon_8hpp_source.html  OpenVision_8hpp_source.html  UniStrokeGestureRecognizer_8hpp_source.html  UniStrokeGesture_8hpp_source.html  _build_config_8java.html  _create_gesture_activity_8java.html  _gesture_library_interface_8java.html  _gesture_point_8cpp.html  _gesture_point_8cpp__incl.map  _gesture_point_8cpp__incl.md5  _gesture_point_8hpp.html  _gesture_point_8hpp__dep__incl.map  _gesture_point_8hpp__dep__incl.md5  _gesture_point_8hpp__incl.map  _gesture_point_8hpp__incl.md5  _gesture_point_8hpp_source.html  _open_c_v_common_8hpp.html  _open_c_v_common_8hpp__dep__incl.map  _open_c_v_common_8hpp__dep__incl.md5  _open_c_v_common_8hpp__incl.md5  _open_c_v_common_8hpp_source.html  _open_vision_8cpp.html  _open_vision_8cpp__incl.map  _open_vision_8cpp__incl.md5  _open_vision_8cpp_a2fa8cf4d53feb428a90ac0279d99de84_icgraph.md5  _open_vision_8cpp_a332b6d178a4fed12a7d221e8f145629b_icgraph.map  _open_vision_8cpp_a332b6d178a4fed12a7d221e8f145629b_icgraph.md5  _open_vision_8cpp_a3cb433f85e26a977f3d893721b3b360c_cgraph.map  _open_vision_8cpp_a3cb433f85e26a977f3d893721b3b360c_cgraph.md5  _open_vision_8cpp_aae480cf5aa7ef817795126da09870789_cgraph.map  _open_vision_8cpp_aae480cf5aa7ef817795126da09870789_cgraph.md5  _open_vision_gesture_a_8java.html  _r_8java.html  _uni_stroke_gesture_8cpp.html  _uni_stroke_gesture_8cpp__incl.map  _uni_stroke_gesture_8cpp__incl.md5  _uni_stroke_gesture_8hpp.html  _uni_stroke_gesture_8hpp__dep__incl.map  _uni_stroke_gesture_8hpp__dep__incl.md5  (+144 more)
samples/Android/AndroidGesture/doxygen/latex/: _build_config_8java.tex  _create_gesture_activity_8java.tex  _gesture_library_interface_8java.tex  (+106 more)
samples/Android/AndroidGesture/html/: index.html
samples/Android/AndroidGesture/jni/: Android.mk  Application.mk  GestureLibraryInterface.cpp  GestureLibraryInterface.hpp
samples/Android/AndroidGesture/latex/: doxygen.sty  refman.tex
samples/Android/AndroidGesture/src/: com_openvision_androidgesture_CreateGestureActivity.h
(+97 files in other folders)
